istio/peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: spring-services-mtls
spec:
  mtls:
    mode: STRICT
